@@ -2,12 +2,10 @@ package ru.practicum.shareit.service.test;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
 import ru.practicum.shareit.item.ItemRepository;
-import ru.practicum.shareit.request.ItemRequestRepository;
-import ru.practicum.shareit.request.ItemRequestServiceImpl;
+import ru.practicum.shareit.item.dto.ItemDto;
+import ru.practicum.shareit.item.model.Item;
+import ru.practicum.shareit.request.*;
 import ru.practicum.shareit.request.dto.ItemRequestDto;
 import ru.practicum.shareit.request.dto.ItemRequestWithResponsesDto;
 import ru.practicum.shareit.request.model.ItemRequest;
@@ -19,21 +17,16 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
-public class ItemRequestServiceImplTest {
+class ItemRequestServiceImplTest {
 
-    @Mock
     private ItemRequestRepository requestRepository;
-
-    @Mock
     private UserRepository userRepository;
-
-    @Mock
     private ItemRepository itemRepository;
-
-    @InjectMocks
     private ItemRequestServiceImpl service;
 
     private User user;
@@ -41,73 +34,113 @@ public class ItemRequestServiceImplTest {
 
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
-        user = new User(1L, "user", "user@mail.com");
+        requestRepository = mock(ItemRequestRepository.class);
+        userRepository = mock(UserRepository.class);
+        itemRepository = mock(ItemRepository.class);
+
+        service = new ItemRequestServiceImpl(requestRepository, userRepository, itemRepository);
+
+        user = new User(1L, "Test User", "test@example.com");
+
         request = ItemRequest.builder()
                 .id(1L)
-                .description("desc")
+                .description("Need a drill")
                 .requester(user)
                 .created(LocalDateTime.now())
                 .build();
     }
 
     @Test
-    void createRequest_success() {
-        ItemRequestDto dto = new ItemRequestDto(null, "desc", null);
-        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-        when(requestRepository.save(any())).thenReturn(request);
+    void createRequest_shouldSaveAndReturnRequestDto() {
+        Long userId = 1L;
+        String description = "Need a ladder";
+        ItemRequestDto requestDto = ItemRequestDto.builder().description(description).build();
+        ItemRequest savedRequest = ItemRequest.builder().id(1L).description(description).requester(user).created(LocalDateTime.now()).build();
 
-        ItemRequestDto result = service.createRequest(1L, dto);
+        when(userRepository.findById(userId)).thenReturn(Optional.of(user));
+        when(requestRepository.save(any())).thenReturn(savedRequest);
 
-        assertEquals("desc", result.getDescription());
-        verify(requestRepository).save(any());
+        ItemRequestDto result = service.createRequest(userId, requestDto);
+
+        assertThat(result.getDescription()).isEqualTo(description);
+        verify(userRepository).findById(userId);
+        verify(requestRepository).save(any(ItemRequest.class));
     }
 
     @Test
-    void getOwnRequests_success() {
+    void getOwnRequests_ReturnsEmptyList() {
         when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-        when(requestRepository.findAllByRequesterIdOrderByCreatedDesc(1L)).thenReturn(List.of(request));
-        when(itemRepository.findByRequestId(1L)).thenReturn(Collections.emptyList());
+        when(requestRepository.findAllByRequesterIdOrderByCreatedDesc(1L)).thenReturn(Collections.emptyList());
 
         List<ItemRequestWithResponsesDto> result = service.getOwnRequests(1L);
 
-        assertEquals(1, result.size());
-        assertEquals("desc", result.get(0).getDescription());
+        assertNotNull(result);
+        assertTrue(result.isEmpty());
     }
 
     @Test
-    void getAllRequests_success() {
+    void getOwnRequests_ThrowsIfUserNotFound() {
+        when(userRepository.findById(99L)).thenReturn(Optional.empty());
+
+        RuntimeException ex = assertThrows(RuntimeException.class,
+                () -> service.getOwnRequests(99L));
+
+        assertEquals("User not found: 99", ex.getMessage());
+    }
+
+    @Test
+    void getAllRequests_ReturnsEmptyList() {
         when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-        when(requestRepository.findAllByRequesterIdNotOrderByCreatedDesc(1L)).thenReturn(List.of(request));
-        when(itemRepository.findByRequestId(1L)).thenReturn(Collections.emptyList());
+        when(requestRepository.findAllByRequesterIdNotOrderByCreatedDesc(1L)).thenReturn(Collections.emptyList());
 
         List<ItemRequestWithResponsesDto> result = service.getAllRequests(1L);
 
-        assertEquals(1, result.size());
-        assertEquals("desc", result.get(0).getDescription());
+        assertNotNull(result);
+        assertTrue(result.isEmpty());
     }
 
     @Test
-    void getRequestById_success() {
+    void getAllRequests_UserNotFound_ThrowsException() {
+        when(userRepository.findById(99L)).thenReturn(Optional.empty());
+
+        RuntimeException exception = assertThrows(RuntimeException.class,
+                () -> service.getAllRequests(99L));
+
+        assertEquals("User not found: 99", exception.getMessage());
+    }
+
+    @Test
+    void getRequestById_RequestNotFound_ThrowsException() {
         when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-        when(requestRepository.findById(1L)).thenReturn(Optional.of(request));
-        when(itemRepository.findByRequestId(1L)).thenReturn(Collections.emptyList());
+        when(requestRepository.findById(99L)).thenReturn(Optional.empty());
 
-        ItemRequestWithResponsesDto result = service.getRequestById(1L, 1L);
+        RuntimeException exception = assertThrows(RuntimeException.class,
+                () -> service.getRequestById(1L, 99L));
 
-        assertEquals("desc", result.getDescription());
+        assertEquals("Request not found: 99", exception.getMessage());
     }
 
     @Test
-    void getRequestById_userNotFound() {
-        when(userRepository.findById(1L)).thenReturn(Optional.empty());
-        assertThrows(RuntimeException.class, () -> service.getRequestById(1L, 1L));
-    }
+    void getRequestById_ReturnsRequestWithItems() {
+        Long requestId = 1L;
+        ItemDto itemDto = ItemDto.builder()
+                .id(10L).name("item").description("desc").available(true).build();
 
-    @Test
-    void getRequestById_requestNotFound() {
-        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-        when(requestRepository.findById(1L)).thenReturn(Optional.empty());
-        assertThrows(RuntimeException.class, () -> service.getRequestById(1L, 1L));
+        when(userRepository.findById(user.getId())).thenReturn(Optional.of(user));
+        when(requestRepository.findById(requestId)).thenReturn(Optional.of(request));
+        Item item = Item.builder()
+                .id(10L)
+                .name("item")
+                .description("desc")
+                .available(true)
+                .request(request)
+                .build();
+
+        when(itemRepository.findByRequestId(requestId)).thenReturn(List.of(item));
+
+        ItemRequestWithResponsesDto result = service.getRequestById(user.getId(), requestId);
+
+        assertThat(result.getItems()).hasSize(1);
+        assertThat(result.getItems().get(0).getName()).isEqualTo("item");
     }
 }
